# heat1d

./: .gitignore  CHANGELOG.md  LICENSE  README.md  heat1d.py  heat1d_example.ipynb  heat1d_mex.c  heat1d_moon.c  heat1dfun.c  orbitfun.c  prettyPlots.py
archive/: .travis.yml  appveyor.yml  test_heat1d.ipynb  travis_pypi_setup.py
c/: Makefile  README.md  fourier_solver.c  fourier_solver.h  heat1d  heat1d.c  heat1d_moon  heat1d_moon.c  heat1dfun.c  heat1dfun.h  orbitfun.c  orbitfun.h  profile_z_dz_rho_k.txt  test_validate.c  yaml_config.c  yaml_config.h
data/: diviner_regtemp_lat00.csv  diviner_regtemp_lat30.csv  diviner_regtemp_lat60.csv
docs/: generate_readme_plots.py  generate_validation_plots.py
matlab/: README.md  heat1d_mex.c  (+4 more)
python/: .coveragerc  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  heat1d.py  prettyPlots.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
python/.github/: ISSUE_TEMPLATE.md
python/conda.recipe/: meta.yaml
python/docs/: .gitignore  CHANGELOG.md  Makefile  api.rst  boundary.md  boundary.rst  cli.md  cli.rst  conf.py  equilibration.md  equilibration.rst  grid.md  grid.rst  history.rst  index.rst  initialization.md  initialization.rst  installation.rst  make.bat  numerical.md  numerical.rst  properties.md  properties.rst  requirements.txt  theory.md  theory.rst  usage.rst  validation.md  validation.rst
python/heat1d/: __init__.py  boundary.py  c_wrapper.py  cli.py  config.py  crater.py  data.py  eclipse.py  flux.py  fourier_solver.py  generate_flux.py  grid.py  grids.py  horizons.py  layers.py  main.py  model.py  model_setup.py  orbits.py  planets.py  plotting.py  profile.py  properties.py  solvers.py  validation.py
python/heat1d/data/: cycles2.txt  div_mapcycles_RA.txt  get_Treg_v0.sh  getlocaltimes.sh  moon-PSR-temp-example-1yr.txt
python/heat1d/examples/: eclipse_example.ipynb  eurybates_body_center.yaml  moon_default.yaml  moon_horizons.yaml
python/heat1d/gui/: __init__.py  __main__.py  app.py  export.py  horizons_worker.py  main_window.py  parameters.py  plot_panel.py  profile_editor.py  run_manager.py  worker.py
python/notebooks/: database_production.ipynb  development.ipynb  downloader_examples.ipynb  heat1d_example.ipynb  horizons_example.ipynb  mass_runs.ipynb  presentation_demo.ipynb
python/tests/: conftest.py  test_boundary.py  test_cli.py  test_crater.py  test_eclipse.py  test_energy_conservation.py  test_fourier_solver.py  test_grid.py  test_heat1d.ipynb  test_heat1d.py  test_horizons.py  test_properties.py  test_solvers.py  test_validation.py
(+2 files in other folders)
