[tool]
[tool.poetry]
name = "heat1d"
version = "0.1.6"
description = "Thermal model for planetary science applications"
license = "MIT license"
authors = ["Paul O. Hayne <paul.hayne@lasp.colorado.edu>"]
readme = "README.rst"

[tool.poetry.scripts]
heat1d = "heat1d.cli:main"

[tool.poetry.dependencies]
python = "*"
click = ">=6.0"
matplotlib = "*"
numpy = "*"
planets = "*"
